--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/console": "4.3.*",
-        "illuminate/container": "4.3.*",
-        "illuminate/http": "4.3.*",
-        "illuminate/support": "4.3.*",
+        "illuminate/console": "~4.2",
+        "illuminate/container": "~4.2",
+        "illuminate/http": "~4.2",
+        "illuminate/support": "~4.2",
         "symfony/process": "2.6.*",
         "nesbot/carbon": "~1.0"
     },
